fixed some text not being the correct colour on dark mode

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -28,6 +28,7 @@ html { overflow-x: hidden; }
  --hamburger-icon-colour: #f2f5f7;
  --coming-soon-text-colour: black;
  --span-btn-colour: #fff;
+ --span-colour: #fff;
 }
 
 body {
